# Velocity-DB

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .semgrepignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  SECURITY.md  TODO.md  branch_protection.json  build_log.txt  build_output.txt  package-lock.json  package.json  pyproject.toml  temp_build.bat  vcpkg.json
.claude/: settings.local.json
.github/: dummy.csproj
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  security-scan.yml  test.yml  tool-version-upgrade.yml
.husky/: pre-commit  pre-push
backend/: CMakeLists.txt  ipc_handler.cpp  ipc_handler.h  main.cpp  webview_app.cpp  webview_app.h
backend/database/: async_query_executor.cpp  async_query_executor.h  connection_pool.cpp  connection_pool.h  driver_factory.cpp  driver_interface.h  odbc_driver_detector.cpp  odbc_driver_detector.h  query_history.cpp  query_history.h  result_cache.cpp  result_cache.h  schema_inspector.cpp  schema_inspector.h  sqlserver_driver.cpp  sqlserver_driver.h  transaction_manager.cpp  transaction_manager.h
backend/exporters/: csv_exporter.cpp  csv_exporter.h  data_exporter.h  excel_exporter.cpp  excel_exporter.h  json_exporter.cpp  json_exporter.h
backend/network/: ssh_tunnel.cpp  ssh_tunnel.h
backend/parsers/: a5er_parser.cpp  a5er_parser.h  sql_formatter.cpp  sql_formatter.h  sql_parser.cpp  sql_parser.h
backend/utils/: credential_protector.cpp  credential_protector.h  file_dialog.cpp  file_dialog.h  file_utils.cpp  file_utils.h  global_search.cpp  global_search.h  json_utils.cpp  json_utils.h  logger.cpp  logger.h  session_manager.cpp  session_manager.h  settings_manager.cpp  settings_manager.h  simd_filter.cpp  simd_filter.h
config/: sql_keywords.txt
docker/vcpkg-build/: Dockerfile  build.ps1  docker-compose.yaml
docs/: ARCHITECTURE.md  PROJECT_INFO.md  TROUBLESHOOTING.md  VISUAL_STUDIO_SETUP.md
frontend/: .env copy.example  biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: bridge.ts  mockData.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/common/: ContextMenu.module.css  ContextMenu.tsx  SimpleTable.module.css  SimpleTable.tsx
frontend/src/components/diagram/: ERDiagram.module.css  ERDiagram.tsx  TableNode.module.css  TableNode.tsx  erDiagramUtils.ts  index.ts
frontend/src/components/dialogs/: A5ERImportDialog.module.css  A5ERImportDialog.tsx  ConnectionDialog.module.css  ConnectionDialog.tsx  DialogBase.module.css  ExecutionPlanDialog.module.css  ExecutionPlanDialog.tsx  QueryConfirmDialog.module.css  QueryConfirmDialog.tsx  SearchDialog.module.css  SearchDialog.tsx  SettingsDialog.module.css  SettingsDialog.tsx  index.ts  settingsUtils.ts
frontend/src/components/editor/: EditorTabs.module.css  EditorTabs.tsx  SqlEditor.module.css  SqlEditor.tsx  index.ts
frontend/src/components/export/: ExportDialog.module.css  ExportDialog.tsx
frontend/src/components/grid/: CellEditor.module.css  CellEditor.tsx  ResultGrid.module.css  ResultGrid.tsx  ValueEditorDialog.module.css  ValueEditorDialog.tsx  index.ts
frontend/src/components/history/: HistoryItem.module.css  HistoryItem.tsx  QueryHistory.module.css  QueryHistory.tsx  index.ts
frontend/src/components/layout/: BottomPanel.module.css  BottomPanel.tsx  CenterPanel.module.css  CenterPanel.tsx  LeftPanel.module.css  LeftPanel.tsx  MainLayout.module.css  MainLayout.tsx  index.ts
frontend/src/components/table/: TableViewer.module.css  TableViewer.tsx
frontend/src/components/tree/: ConnectionTreeSection.tsx  ContextMenu.module.css  ContextMenu.tsx  ObjectTree.module.css  ObjectTree.tsx  TreeNode.module.css  TreeNode.tsx  index.ts
frontend/src/hooks/: useDialogKeyboard.ts
frontend/src/store/: bookmarkStore.ts  connectionStore.ts  editStore.ts  erDiagramStore.ts  historyStore.ts  index.ts  queryStore.ts  sessionStore.ts
frontend/src/styles/: datagrip-dark-theme.css  global.css
frontend/src/tests/: App.test.tsx  setup.ts
frontend/src/tests/stores/: historyStore.test.ts  queryStore.test.ts
frontend/src/tests/utils/: sqlSafetyCheck.test.ts
frontend/src/types/: grid.ts  index.ts
frontend/src/utils/: logger.ts  sqlSafetyCheck.ts
scripts/: build.bat  build.py  build_backend.py  build_frontend.py  check-all.bat  check_all.py  convert-eol.bat  convert-eol.ps1  convert_eol.py  cpp-build-inner.bat  cpp-build.bat  cpp-check.bat  cpp_check.py  dev.py  lint_frontend.py  package.bat  package.py  pdg.py  run-lint.bat  run_lint.py  setup_github_settings.ps1  setup_github_settings.py  test.bat  test.py  test_frontend.py
scripts/_lib/: __init__.py  build.py  lint.py  test.py  utils.py
src/: CMakeLists.txt  ipc_handler.cpp  ipc_handler.h  main.cpp  webview_app.cpp  webview_app.h
src/database/: async_query_executor.cpp  async_query_executor.h  connection_pool.cpp  connection_pool.h  odbc_driver_detector.cpp  query_history.cpp  query_history.h  result_cache.cpp  result_cache.h  schema_inspector.cpp  schema_inspector.h  sqlserver_driver.cpp  sqlserver_driver.h  transaction_manager.cpp  transaction_manager.h
src/exporters/: csv_exporter.cpp  csv_exporter.h  data_exporter.h  excel_exporter.cpp  excel_exporter.h  json_exporter.cpp  json_exporter.h
src/parsers/: a5er_parser.cpp  a5er_parser.h  sql_formatter.cpp  sql_formatter.h  sql_parser.cpp  sql_parser.h
src/utils/: credential_protector.cpp  credential_protector.h  file_utils.cpp  file_utils.h  global_search.cpp  global_search.h  json_utils.cpp  json_utils.h  logger.cpp  logger.h  session_manager.cpp  settings_manager.cpp  settings_manager.h  simd_filter.cpp  simd_filter.h
tests/: CMakeLists.txt
tests/database/: test_query_history.cpp  test_schema_inspector.cpp  test_sqlserver_driver.cpp  test_transaction_manager.cpp
tests/exporters/: test_csv_exporter.cpp
tests/parsers/: debug_formatter.cpp  test_a5er_parser.cpp  test_complex_sql.txt  test_formatter_output.cpp  test_sql_formatter.cpp
(+15 files in other folders)
